## Process this file with automake to produce Makefile.in

SUBDIRS = config Half HalfTest Iex IexTest Imath ImathTest IlmThread IlmImf \
	  IlmImfTest exrdisplay exrheader exrmaketiled IlmImfExamples doc vc \
	  exrstdattr exrmakepreview exrenvmap

EXTRA_DIST = bootstrap README.win32 README.OSX README.CVS LICENSE openexr.m4 \
	     config.windows/OpenEXRConfig.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = OpenEXR.pc

m4datadir = $(datadir)/aclocal
m4data_DATA = openexr.m4

